# cybot-proto

crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/executor/: Cargo.toml  build.rs  cbindgen.toml  cyproto.h  exmaple.c
crates/executor/.cargo/: config.toml
crates/executor/src/: lib.rs
crates/instructor/: Cargo.toml
crates/instructor/src/: com.rs  console.rs  main.rs
crates/mock/: Cargo.toml
crates/mock/src/: main.rs
