[package]
authors = ["Jack Morrison <jackamorr@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "cyproto-executor"
version = "0.1.0"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
serde = { version = "1.0", default-features = false }
postcard = { version = "1.0" }
heapless = { version = "0.7" }
cybot = { path = "../../../cybot" }
cyproto-core = { path = "../core" }

[build-dependencies]
cbindgen = "0.24"

[profile.release]
#codegen-units = 1 # better optimizations
#debug = true      # symbols are nice and they don't increase the size on Flash
#lto = "fat"       # better optimizations set to "fat" for even better optimizations
