[package]
name = "cyproto"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
postcard = { version = "1.0", features = ["use-std"] }
cyproto-core = { path = "../core" }
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
